Bash scripts for automating data download. Environment yml file added listing channels and dependencies. .gitignore added with /data

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: viz
+name: drought
 channels:
   - conda-forge
   - defaults
@@ -6,5 +6,6 @@ channels:
 dependencies:
   - r-base=4.3
   - r-tidyverse=2.0
+  - wget=1.21.4
   - r-gganimate
   - r-plotly
