New bash and R scripts for concatenating files extracted from tarball, using ~850mb instead of 30gb. Next issue is to lower RAM usage.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ code/ghcnd_stations.bash
 code/practice.R
 write_dir.tar.gz/
 write_files.tat.gz/
+practice_pipe.gz
+practice.output.gz
+practice.tar.gz
+ghcnd_all/
