Create Github Actions worklow to run snakemake pipeline

--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ channels:
 dependencies:
   - r-base=4.3
   - r-tidyverse=2.0
+  - r-rmarkdown=2.25
   - wget
   - snakemake=7.32.4
   - graphviz=8.1
