--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - r-base=4.3
   - r-tidyverse=2.0
   - r-rmarkdown=2.25
-  - r-showtext=0.9
+  #- r-showtext
   - wget
   - snakemake=7.32.4
   - graphviz=8.1
